--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,3 +1,13 @@
+.headPg, .fenderAs h2, .suhrStand h2, .rigInd h2 {
+  font-size: 40px;
+  font-style: italic;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: antiquewhite;
+  -webkit-text-stroke: black 2px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly; }
+
 /* INDEX */
 * {
   margin: 0px;
@@ -206,15 +216,6 @@ main .logRig {
   text-align: center; }
   .fenderAs .imgFend {
     box-shadow: 1px 10px 15px black; }
-  .fenderAs h2 {
-    font-size: 40px;
-    font-style: italic;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: antiquewhite;
-    -webkit-text-stroke: black 2px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly; }
   .fenderAs h3 {
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -232,17 +233,6 @@ main .logRig {
     justify-content: space-evenly; }
 
 /* SUHR */
-.suhrStand h2 {
-  font-size: 40px;
-  font-style: italic;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: antiquewhite;
-  -webkit-text-stroke: black 2px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  text-align: center; }
-
 .suhrStand .imgSuhr {
   border-radius: 6px;
   box-shadow: 1px 10px 15px black; }
@@ -283,14 +273,6 @@ main .logRig {
 
 /* RIGS */
 .rigInd h2 {
-  font-size: 40px;
-  font-style: italic;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: antiquewhite;
-  -webkit-text-stroke: black 2px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
   margin: 30px; }
 
 .rigInd .rigBlack {
@@ -348,6 +330,8 @@ main .logRig {
     border-radius: 6px;
     border: 3px solid antiquewhite;
     text-align: start; }
+    .papiForm .formulario .btn {
+      background-color: #32c3d6; }
 
 @media screen and (max-width: 320px) {
   /* INDEX */
