--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -33,6 +33,10 @@
         border-radius: 6px;
         border: 3px solid antiquewhite;
         text-align: start;
+
+        .btn {
+            background-color: rgb(50, 195, 214);
+        }
     }
 
 
