--- a/scss/_fender.scss
+++ b/scss/_fender.scss
@@ -11,14 +11,7 @@
 }
 
 h2 {
-    font-size: 40px;
-    font-style: italic;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: antiquewhite;
-    -webkit-text-stroke: black 2px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    @extend .headPg;
 }
 h3 {
     font-size: 20px;
@@ -38,8 +31,6 @@ p {
 
 
 .fenderTest {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    @include vidHead (flex,row,space-evenly);
 }
 }
